# filecluster

./: .gitignore  CMakeLists.txt  README.md
data/: filelist.txt
include/: kmeans.hpp  string_for_kmean.hpp  unit_test.hpp  utils.hpp
lib/: jaroWinkler.cpp  jaroWinkler.hpp
result/: K10_iter200_result.txt  K3_iter200_result.txt  K4_iter200_result.txt  K5_iter200_result.txt  K6_iter200_result.txt  K7_iter200_result.txt  K8_iter200_result.txt  K9_iter200_result.txt
src/: kmeans.cpp  main.cpp  string_for_kmean.cpp  unit_test.cpp
